<resources>
    <string name="app_name">TodoApp</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="fab_desc">floating action button\n</string>
    <string name="task_name">Basketball</string>
    <string name="task_time">10:11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_todo_fragment">Add new task</string>
    <string name="task_name_et">Task name</string>
    <string name="description">Description</string>
    <string name="default_time">10:01</string>
    <string name="default_date">1/1/2025</string>
    <string name="edit_task">Edit task</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
</resources>