<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.bottomsheet.AddTodoFragment"
    android:padding="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragmentTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_todo_fragment"
        style="@style/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragmentTitleTv"
        android:layout_marginTop="15dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_et"
            style="@style/titleMedium"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/taskNameLayout"
        android:layout_marginTop="15dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            style="@style/titleMedium"
            android:minLines="3"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDescriptionLayout"
        style="@style/titleMedium"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_time_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_time"
        style="@style/titleSmall"
        app:layout_constraintTop_toTopOf="@id/selectTimeTv"
        app:layout_constraintBottom_toBottomOf="@id/selectTimeTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectTimeTv"
        style="@style/titleMedium"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/select_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        app:layout_constraintTop_toTopOf="@id/selectDateTv"
        app:layout_constraintBottom_toBottomOf="@id/selectDateTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        style="@style/titleSmall"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addContactFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDateTv"
        android:gravity="center"
        app:flow_verticalAlign="center"
        android:contentDescription="@string/fab_desc"
        app:borderWidth="3dp"
        android:backgroundTint="@color/blue"
        android:src="@drawable/ic_check"
        style="@style/floatingButtonStyle"
        />
</androidx.constraintlayout.widget.ConstraintLayout>