<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.update.UpdateTaskActivity"
    android:background="@color/mint_green">

    <include layout="@layout/blue_view"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="25dp"
        android:minWidth="40dp"
        android:src="@drawable/ic_back"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToDo List"
        style="@style/title"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        android:layout_marginStart="15dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:padding="20dp"
        android:layout_margin="20dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/updateTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task"
            style="@style/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/updateTitleTv"
            android:layout_marginTop="15dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name_et"
                style="@style/titleMedium"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskDescriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/taskNameLayout"
            android:layout_marginTop="15dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                style="@style/titleMedium"
                android:minLines="3"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectTimeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskDescriptionLayout"
            style="@style/titleMedium"
            android:layout_marginTop="15dp"
            android:padding="10dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            style="@style/titleSmall"
            app:layout_constraintTop_toTopOf="@id/selectTimeTv"
            app:layout_constraintBottom_toBottomOf="@id/selectTimeTv"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="15dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectTimeTv"
            style="@style/titleMedium"
            android:layout_marginTop="15dp"
            android:padding="10dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            app:layout_constraintTop_toTopOf="@id/selectDateTv"
            app:layout_constraintBottom_toBottomOf="@id/selectDateTv"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="15dp"
            style="@style/titleSmall"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/updateTask_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="30sp"
            android:background="@drawable/bg_rounded_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectDateTv"
            android:src="@drawable/ic_save_changes"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>